--- a/src/index.jade
+++ b/src/index.jade
@@ -23,6 +23,8 @@ html
         h3.avatar-name
           a(href='https://twitter.com/markdalgleish') @likethemammal
 
+        a.floating-link(href="http://goo.gl/l1ehqI") http://goo.gl/l1ehqI
+
       section
         img.avatar(src='images/obama.jpg')
         br
@@ -251,9 +253,13 @@ html
         p Questions?
 
       section.light(data-bespoke-state='green')
+        h2
+          a(href="http://goo.gl/l1ehqI") http://goo.gl/l1ehqI
+        br
         img.avatar.avatar--small(src='images/profile.jpg')
         h3.avatar-name
           a(href='https://twitter.com/markdalgleish') @likethemammal
+          br
           a(href='https://likethemammal.com')   likethemammal.com
 
 
