--- a/src/index.jade
+++ b/src/index.jade
@@ -5,7 +5,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
     title The Accessibility of Programming
 
-    link(href='http://fonts.googleapis.com/css?family=Open+Sans:300,600', rel='stylesheet', type='text/css')
+    link(href='styles/open-sans-font.css', rel='stylesheet', type='text/css')
 
     // build:css styles/styles.css
     link(rel='stylesheet', type='text/css', href='bower_components/prism/themes/prism-twilight.css')
