Add freelance line, updated Chrome OS slide.

--- a/src/index.jade
+++ b/src/index.jade
@@ -151,7 +151,7 @@ html
       section
         h2 What is the <strong>DOM</strong>?
 
-      section.gif.gif--twitter.blur.faded2
+      section.gif.gif--twitter.blur.faded3
         h2 Investigate how your favorite sites work.
         p Its a great way to learn ;p
 
@@ -177,14 +177,15 @@ html
         p Chrome OS
         p Chrome Dev Tools
 
-      section
+      section.gif.gif--chrome.blur.faded2
         h2 Chrome OS
         p cheap
+        p quick
         p extendable
         p closed
 
       section
-        h2 Chrome Dev Tools
+        h2 <span id="chrome">Chrome</span> Dev Tools
         p Elements panel
         p Console panel
         p Sources panel
@@ -261,6 +262,10 @@ html
           a(href='https://twitter.com/markdalgleish') @likethemammal
           br
           a(href='https://likethemammal.com')   likethemammal.com
+
+        p Always looking for freelance work
+          br
+          a(href="mailto:dolphin@likethemammal.com") dolphin@likethemammal.com
 
 
         // build:js scripts/scripts.js
