--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -282,6 +282,8 @@ a
     background-image: url(../images/gif/eye.gif)
   &--twitter:before
     background-image: url(../images/twitter.png)
+  &--chrome:before
+    background-image: url(../images/chrome.jpg)
 
 .tiny-subheader
   font-size: 24px;
@@ -297,6 +299,9 @@ a
   opacity: 0.7
 
 .faded2:before
+  opacity: 0.35
+
+.faded3:before
   opacity: 0.1
 
 .image
