Adding 'Search' to backend slide, added name to front slide.

--- a/src/index.jade
+++ b/src/index.jade
@@ -21,7 +21,7 @@ html
         span.tiny-subheader why is it so scary to learn?
         img.avatar.avatar--small(src='images/profile.jpg')
         h3.avatar-name
-          a(href='https://twitter.com/markdalgleish') @likethemammal
+          a(href='https://twitter.com/markdalgleish') Chris Dolphin   @likethemammal
 
         a.floating-link(href="http://goo.gl/l1ehqI") http://goo.gl/l1ehqI
 
@@ -111,6 +111,7 @@ html
         p Databases
         p Real-time (i.e. chat, twitter feed, etc.)
         p Login/Signup
+        p Search
         p Processing forms
         p Much scarier things...
 
